Modified the tutorial

--- a/tutorial2.ipynb
+++ b/tutorial2.ipynb
@@ -6,13 +6,11 @@
    "source": [
     "## Setting and determining variable types\n",
     "\n",
-    "The following code contains only two lines\n",
+    "In the first line, a *variable* `q` is set as the integer, 6. Python will automatically classify the variable's datatype based on the user's input if the datatype is not explicitly set. \n",
     "\n",
-    "In the first line, a *variable* `y` is set as the integer, 6. Python will automatically classify the variable's datatype based on the user's input if the datatype is not explicitly set. \n",
+    "We can use the python function `print` to show the variable in standard output and the datatype\n",
     "\n",
-    "The second line uses the python function `print` to show the variable in standard output and the datatype\n",
-    "\n",
-    "Run the code to see standard output. For instructions on launching console and running code selections, see [Tutorial 1](https://github.com/biovcnet/python/tree/master/Lesson1)"
+    "Run the code to see standard output"
    ]
   },
   {
@@ -21,37 +19,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set variable\n",
-    "y=6\n",
+    "#immutable data types\n",
+    "#int\n",
+    "q = 6\n",
+    "#string\n",
+    "w = \"Hello there\"\n",
+    "#float\n",
+    "e = 42.42\n",
+    "#tuples\n",
+    "r = (5,32.0)\n",
+    "\n",
+    "#mutable data types\n",
+    "#list\n",
+    "#sets\n",
+    "#dictionary\n",
     "\n",
     "#print variable type\n",
-    "print('y is ',type(y))"
+    "print(w,\"is\",type(w))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the print statement prints the integer 6, which `y` is now set to, and the datatype- `class int`\n",
+    "Notice that the print statement prints the name of variable, and not `6`, and the datatype- `class int`\n",
     "\n",
-    "Edit the the variable declaration and the print function to set the variable using each python method in the *python function* column of **Table I**. You may do this in any order you like as long as the **last time the variable is set as a string**. This is required for the next exercise."
+    "Following the commented out line - examine all of the variables and variable type outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Replace q with different variable letters\n",
+    "#print(q, type(q))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## string manipulation\n",
+    "It is possible to force Python to change the data type of a variable using the functions in the *python method* column of **Table I**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#start with a float\n",
+    "t = 63.21\n",
+    "#convert to other data types\n",
+    "#y = str(t)\n",
+    "#print(y, type(y))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(w+\"is\"+type(w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can only *concatenate* strings with other strings. To combine into into one string, we use a `+`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## String manipulation\n",
+    "\n",
+    "Biology data comes in 2 types - sequences and numbers\n",
     "\n",
     "Python strings can be manipulated by several built-in functions. The most common are `strip`,`lower`,`upper`,`replace`, and `split`\n",
     "\n",
-    "These built in functions are used in the format `theString.function()`. Specifics are in **Table III**\n",
+    "These built in functions are used in the format `theString.function()`. Specifics are in **Table II**\n",
     "\n",
-    "Technical note on `strip`: it only strips the string of the *leading* and *trailing* characters specified.\n",
-    "\n",
-    "Before we continue, double check that **y is set as str** in your console by running the the cell below.\n",
-    "\n",
-    "We are first going to *concatenate* y with another string- combine into into one string. Strings can be concatenated using a `+`"
+    "Technical note on `strip`: it only strips the string of the *leading* and *trailing* characters specified."
    ]
   },
   {
@@ -60,38 +114,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(type(y))"
+    "sequence = \"\\nATGCGATTTCAGATCT\\n\"\n",
+    "taxonomy = \"D_0__Bacteria;D_1__Proteobacteria;D_2__Gammaproteobacteria;D_3__Betaproteobacteriales;D_4__Burkholderiaceae;D_5__Parasutterella\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set a variable `newString` to `'y is '+y` in the cell provided below"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's now set newString to an altered version of itself using the built in functions.\n",
-    "\n",
-    "Do the following in this order:\n",
-    "\n",
-    "+ set newString to all uppercase letters and print \n",
-    "+ set newString to all lowercase letters and print\n",
-    "+ remove any occurrences of the character `y` at the trailing ends of the string and print\n",
-    "+ replace the space now at the beginning of newString with `y` and print\n",
-    "+ break up the string along occurrences of the `space character` print\n",
-    "\n",
-    "The first item in the list will be provided as an example below. Edit the cell with the first item to go through each item in the list"
+    "Compare `sequence` before and after `.strip()`"
    ]
   },
   {
@@ -100,23 +131,130 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "newString=newString.upper()\n",
-    "print(newString)"
+    "print(sequence+sequence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence = sequence.strip()\n",
+    "print(sequence+sequence)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While manipulating strings in python, there are special characters that the user needs to be aware of. These *escape characters* are listed in **Table II**\n",
+    "Convert sequence using `upper`, `lower`, and `replace`\n",
+    "\n",
+    "***Print the variable sequence in all lower case***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print without changing the variable\n",
+    "\n",
+    "#create a new varialbe seq_lowercase\n",
+    "\n",
+    "#change the variable sequence to be lower case\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Now convert your lower case sequences to upper case***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print current sequence state\n",
+    "\n",
+    "#create an upper case version of seq_lowercase. call the variable seq_uppercase\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use replace to change elements of the string\n",
+    "\n",
+    "`replace` formatting looks like string.replace('T','U')\n",
+    "\n",
+    "***Use replace to change our DNA sequence into mRNA***\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a new variable called mrna using replace\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`split` allows us to use a delimiter to convert our string into list (we will talk more about lists in Lesson 3)\n",
+    "\n",
+    "***Split our taxonomy on various delimiters in the string***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#use ; as delimiter\n",
+    "list1 = taxonomy.split(';')\n",
+    "print(list1)\n",
+    "#use D_ as delimiter\n",
+    "\n",
+    "#use ;D_ as delimter\n",
+    "\n",
+    "#use ;D_4__ as delimiter\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While manipulating strings in python, there are special characters that the user needs to be aware of. These *escape characters* are listed in **Table III**\n",
     "\n",
     "An *escape character* is a character or combination of characters that tells python to encode a format. \n",
     "\n",
-    "For example, the `\\n` escape character tells python to break the string and start a new line. \n",
+    "As above when dealing with `strip` the `\\n` escape character tells python to break the string and start a new line. \n",
     "\n",
     "We will concatenate two strings with the escape characters listed in **Table II** in a print statement. \n",
     "\n",
     "Run the cell below to set string1 and string2, using the first escape character as an example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Edit the cells and rerun to go through the escape characters in **Table II**.\n",
+    "\n",
+    "`\\` in Python has a ability to force special characters to behavior like normal characters OR for a normal character to act as a special character. There is only a handful of these examples.\n",
+    "\n",
+    "Notice that to print the escape character, it is enclosed in `r\" \"`. This runs a python function `repr()` which stops the escape character from doing its job within the string."
    ]
   },
   {
@@ -126,14 +264,8 @@
    "outputs": [],
    "source": [
     "string1='the escape character '+r\"\\'\"\n",
-    "string2=' does \\''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Run the cell below to print the concatenated string."
+    "string2=' does\\'TESTSTRING'\n",
+    "print(string1+string2)"
    ]
   },
   {
@@ -141,16 +273,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(string1 + string2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Edit the cells and rerun to go through the escape characters in **Table II**. Notice that to print the escape character, it is enclosed in `r\" \"`. This runs a python function `repr()` which stops the escape character from doing its job within the string."
-   ]
+   "source": []
   }
  ],
  "metadata": {
