--- a/tutorial3.ipynb
+++ b/tutorial3.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "A common first task in many bioinformatics analyses is cleaning up strings- whether it be sequences or taxonomy information.\n",
     "\n",
-    "Below, will will remove empty spaces from tax_string. For our analyses, we are only interested in the taxonomic information down to the order level. So, we will select a substring up to that point by finding “o__”. Finally, we will remove all of the taxonomic level indicators."
+    "Below, we  will declare three variables. Then, we will remove empty spaces from tax_string. For our analyses, we are only interested in the taxonomic information down to the order level. So, we will select a substring up to that point by finding “o__”. Finally, we will remove all of the taxonomic level indicators."
    ]
   },
   {
@@ -27,6 +27,9 @@
    "outputs": [],
    "source": [
     "tax_string = \"d__Bacteria; p__Proteobacteria; c__Alphaproteobacteria; o__Rhizobiales; f__Xanthobacteraceae; g__Bradyrhizobium; s__Bradyrhizobium canariense_A\"\n",
+    "parameters = [\"Sample1\", \"Sample2\", \"Nitrogen1\", \"Nitrogen2\"]\n",
+    "data_values = [0.4, 5.0, 1.2, 1.4]"
+    
     "\n",
     "\n",
     "tax_string.strip()"
@@ -65,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orderEndInd=tax_string.find(';__f')\n",
+    "orderEndInd=tax_string.find(';f__')\n",
     "\n",
     "print(orderEndInd)"
    ]
