--- a/tutorial3.ipynb
+++ b/tutorial3.ipynb
@@ -335,7 +335,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdDict=dict(sdTupleList)"
+    "sdDict=dict(sdTupleList)\n",
+    "print(sdDict)"
    ]
   },
   {
