--- a/tutorial3.ipynb
+++ b/tutorial3.ipynb
@@ -768,7 +768,7 @@
    "source": [
     "#### popitem()\n",
     "\n",
-    "`popitem()` removes a key-value pair from a dictionary  using the key and returns a tuple"
+    "`popitem()` removes the last key-value pair from a dictionary using the key and returns a tuple"
    ]
   },
   {
